import("//gn/common.gni")

# STM32F4
if (target_soc == "STM32F405xx" ||
    target_soc == "STM32F415xx" ||
    target_soc == "STM32F407xx" ||
    target_soc == "STM32F417xx" ||
    target_soc == "STM32F427xx" ||
    target_soc == "STM32F437xx" ||
    target_soc == "STM32F429xx" ||
    target_soc == "STM32F439xx" ||
    target_soc == "STM32F401xC" ||
    target_soc == "STM32F401xE" ||
    target_soc == "STM32F410Tx" ||
    target_soc == "STM32F410Cx" ||
    target_soc == "STM32F410Rx" ||
    target_soc == "STM32F411xE" ||
    target_soc == "STM32F446xx" ||
    target_soc == "STM32F469xx" ||
    target_soc == "STM32F479xx" ||
    target_soc == "STM32F412Cx" ||
    target_soc == "STM32F412Zx" ||
    target_soc == "STM32F412Rx" ||
    target_soc == "STM32F412Vx" ||
    target_soc == "STM32F413xx" ||
    target_soc == "STM32F423xx") {

    component("stm32f4") {
        sources = [
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_adc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_eth.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_fmpsmbus.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_ltdc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_hash_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_exti.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_gpio.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_sdram.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dsi.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_hash.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dfsdm.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dma.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_rtc_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_lptim.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_uart.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dma2d.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_fsmc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dac.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_usb.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_flash_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_rng.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_fmpi2c_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_fmpi2c.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_rtc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_qspi.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_can.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_cec.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_gpio.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_rcc_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_usart.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_iwdg.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_hcd.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_crc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_cortex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_rcc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_adc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_pcd_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_i2s.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_crc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_tim.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_dma2d.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_sdmmc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_dac.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_cryp_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dcmi_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_sram.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_mmc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_utils.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_lptim.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_rcc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dac_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_usart.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_pwr.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_fmpsmbus_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_spdifrx.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_spi.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_pccard.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_rtc.c",
            "stm32cube/stm32f4xx/drivers/src/Legacy/stm32f4xx_hal_eth.c",
            "stm32cube/stm32f4xx/drivers/src/Legacy/stm32f4xx_hal_can.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_pcd.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dcmi.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_exti.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_sai_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_timebase_rtc_alarm_template.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_i2s_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_smartcard.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_rng.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_irda.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_i2c.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_i2c_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_adc_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_fmc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_flash_ramfunc.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_nand.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_cryp.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_msp_template.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_pwr.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_smbus.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_sai.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_flash.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_dma_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_nor.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_spi.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_ltdc_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_i2c.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_sd.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_timebase_rtc_wakeup_template.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_wwdg.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_pwr_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_tim_ex.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_fmpi2c.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_tim.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_hal_timebase_tim_template.c",
            "stm32cube/stm32f4xx/drivers/src/stm32f4xx_ll_dma.c"
        ]
        include_dirs = ["."]
        configs = [":stm32f4_config"]
        component_type = "static_library"
    }

    config("stm32f4_config") {
        configs = [":stm32cube_config"]
        include_dirs = [
            "stm32cube/stm32f4xx/soc",
            "stm32cube/stm32f4xx/drivers/include",
            "stm32cube/stm32f4xx/drivers/include/Legacy",
        ]
        defines = [
            "CONFIG_SOC_SERIES_STM32F4X",
            "CORE_CM4",
            "${target_soc}"
        ]
    }
} 

# STM32H7
else if (target_soc == "STM32H743xx" ||
    target_soc == "STM32H753xx" ||
    target_soc == "STM32H750xx" ||
    target_soc == "STM32H742xx" ||
    target_soc == "STM32H745xx" ||
    target_soc == "STM32H755xx" ||
    target_soc == "STM32H747xx" ||
    target_soc == "STM32H757xx") {
    component("stm32h7") {
        sources = [
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_lptim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rtc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_fmac.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_mmc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_dma2d.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_lpuart.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_hash.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_adc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_irda.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_tim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_mmc.c",
            # "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_timebase_tim_template.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dfsdm_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_smartcard_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sram.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dac_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_spdifrx.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rng_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_exti.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_lptim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_crc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_rtc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_ltdc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sd.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_flash_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_usb.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_opamp.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_i2s.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_delayblock.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_tim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_iwdg.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_ramecc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_i2s_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sai.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_wwdg.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dma.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_exti.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_cec.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_usart.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_eth.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dfsdm.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_gpio.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_dac.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_hcd.c",
            # "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_timebase_rtc_wakeup_template.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_mdma.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rng.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_fmc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dma_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_flash.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_hsem.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_comp.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_nand.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_cordic.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_dma.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_utils.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_pcd.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_cortex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_bdma.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_hrtim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_spi_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_gpio.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_smbus.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_swpmi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_opamp.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_usart_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_hrtim.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sdram.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dsi.c",
            # "stm32cube/stm32h7xx/drivers/src/Legacy/stm32h7xx_hal_eth.c",
            # "stm32cube/stm32h7xx/drivers/src/Legacy/stm32h7xx_hal_eth_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_ospi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_tim_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_uart_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_gfxmmu.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_pwr.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_sdmmc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_hash_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_qspi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_comp.c",
            # "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_msp_template.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_pssi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sd_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_i2c_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_pwr_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_spi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_fmac.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rtc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_ltdc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_jpeg.c",
            # "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_timebase_rtc_alarm_template.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_mdios.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_adc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_i2c.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_opamp_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_nor.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dts.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dac.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_spi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_i2c.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_smbus_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_swpmi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_smartcard.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_rng.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dma2d.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_pwr.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_crc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_otfdec.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_rcc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_adc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_crs.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_mdma.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rcc.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_cordic.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_uart.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_usart.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_fdcan.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_rcc_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_cryp.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_eth_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_dcmi.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_cryp_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_sai_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_hal_pcd_ex.c",
            "stm32cube/stm32h7xx/drivers/src/stm32h7xx_ll_crc.c"
        ]

        include_dirs = ["."]
        configs = [":stm32h7_config"]
        component_type = "static_library"
    }

    config("stm32h7_config") {
        configs = [":stm32cube_config"]
        include_dirs = [
            "stm32cube/stm32h7xx/soc",
            "stm32cube/stm32h7xx/drivers/include",
            "stm32cube/stm32h7xx/drivers/include/Legacy",
        ]
        defines = [
            "CONFIG_SOC_SERIES_STM32H7X",
            "CORE_CM7",
            "${target_soc}"
        ]
    }
}

#Unknown
else {
    assert(0, "Invalid STM32 Soc: ${target_soc}")
}


#COMMON
config("stm32cube_config") {
    include_dirs = ["stm32cube/common_ii/include"]
    cflags = [
        "-Wno-extra",
        "-Wno-error",
        "-Wno-pointer-compare"
    ]
    defines = [
        "USE_HAL_DRIVER",
        "USE_FULL_LL_DRIVER"
    ]
    configs = [
        "//embeded/rtems/bsps/arm/shared/cmsis:cortexM_config"
    ]
}